新增脚本：京小兑

--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.31.2
+## Version: v3.32.2
 ## Date: 2021-03-06
-## Update Content: 调整互助码填写区域，新增导出互助码模板
+## Update Content: 新增脚本 京小兑
 
 ## 上面版本号中，如果第 2 位数字有变化，那么代表推荐更新，如果只有第 3 位数字有变化，则可更新可不更新
 ## 如需更新，请参考项目 README 中“如何更新配置文件”部分的操作说明，进行智能比对后修改。
@@ -306,6 +306,11 @@ export JDJOY_APPLYJDBEAN=""
 ################################## 京喜财富岛（选填） ##################################
 ## 定义京喜财富岛运行脚本后是否通知，默认 "false" 不通知，如需要通知，请设置为 "true"
 export CFD_NOTIFY_CONTROL=""
+
+
+################################## 京小兑（选填） ##################################
+## 定义京小兑是否自动把抽奖卷兑换为兑币，默认否，如需自动兑换，请设置为 "true"，不填则为不兑换
+export JD_JXD_EXCHANGE=""
 
 
 ################################## 她的节（选填） ##################################
