--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.32.2
-## Date: 2021-03-06
-## Update Content: 新增脚本 京小兑
+## Version: v3.33.2
+## Date: 2021-03-08
+## Update Content: 新增脚本京小兑，宠汪汪赛跑添加赛跑互助控制变量
 
 ## 上面版本号中，如果第 2 位数字有变化，那么代表推荐更新，如果只有第 3 位数字有变化，则可更新可不更新
 ## 如需更新，请参考项目 README 中“如何更新配置文件”部分的操作说明，进行智能比对后修改。
@@ -229,6 +229,11 @@ export JOY_RUN_FLAG=""
 ## 各个账号间请使用 & 分隔，比如：JOY_TEAM_LEVEL="2&2&50&10"
 ## 如果你有 5 个账号但只写了四个数字，那么第 5 个账号将默认参加 2 人赛，账号如果更多，与此类似
 export JOY_TEAM_LEVEL=""
+
+
+################################## 定义宠汪汪赛跑互助（选填） ##################################
+## 控制 jd_joy_run.js 脚本宠汪汪赛跑是否自己账号内部互助，默认为 "false" 给脚本作者 lxk0301 内置的助力，输入 "true" 开启内部互助
+export JOY_RUN_HELP_MYSELF=""
 
 
 ################################## 定义宠汪汪赛跑获胜后是否推送通知（选填） ##################################
